# mod2

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  justfile
doc/: .prettierignore  .prettierrc.yaml  Architecture.md  Code Annotation, Indexing, Cross-reference.md  Design.md  DesignNotes.md  Indexes.md  Memory Management.md  QuickStart.md  RoadMap.md  Syntax.md
examples/: example1.mod2
mod2/: .gitignore  Cargo.toml  README.md  build.rs
mod2-abs/: Cargo.toml  README.md
mod2-abs/src/: any.rs  erased.rs  graph.rs  hash.rs  heap.rs  index_set.rs  lib.rs  memory.rs  nat_set.rs  numeric.rs  optimizable_int.rs  partial_ordering.rs  rccell.rs  special_index.rs  string_util.rs  unsafe_ptr.rs
mod2-abs/src/log/: macros.rs  mod.rs
mod2-lib/: Cargo.toml  README.md
mod2-lib/doc/: DagNode.md  DesignIssues.md  DesignNotes.md
mod2-lib/src/: lib.rs
mod2-lib/src/api/: atom.rs  dag_node.rs  dag_node_cache.rs  extension_info.rs  mod.rs  subproblem.rs  symbol.rs  term.rs
mod2-lib/src/api/automaton/: lhs_automaton.rs  mod.rs  rhs_automaton.rs
mod2-lib/src/api/built_in/: mod.rs  nonalgebraic_dag_node.rs  nonalgebraic_datatype.rs  nonalgebraic_lhs_automaton.rs  nonalgebraic_rhs_automaton.rs  nonalgebraic_symbol.rs  nonalgebraic_term.rs
mod2-lib/src/api/free_theory/: compiler.rs  free_dag_node.rs  free_net.rs  free_symbol.rs  free_term.rs  mod.rs  remainder.rs
mod2-lib/src/api/free_theory/free_automata/: lhs_automaton.rs  mod.rs  rhs_automaton.rs
mod2-lib/src/api/variable_theory/: automaton.rs  mod.rs  variable_dag_node.rs  variable_symbol.rs  variable_term.rs
mod2-lib/src/core/: cached_dag.rs  dag_node_args.rs  dag_node_core.rs  format.rs  hash_cons_set.rs  index.rs  interpreter.rs  local_bindings.rs  memo_map.rs  mod.rs  module.rs  narrowing_variable_info.rs  profile.rs  redex_position.rs  strategy.rs  substitution.rs  symbol_core.rs  term_bag.rs  term_core.rs  theory.rs  variable_info.rs
mod2-lib/src/core/allocator/: node_allocator.rs  storage_allocator.rs  tests.rs
mod2-lib/src/core/automata/: binding_lhs_automaton.rs  copy_rhs_automaton.rs  mod.rs  rhs_builder.rs  trivial_rhs_automata.rs
mod2-lib/src/core/gc/: arena.rs  bucket.rs  gc_vector.rs  mod.rs  node_allocator.rs  root_container.rs  storage_allocator.rs  tests.rs
mod2-lib/src/core/gc/root_container/: mod.rs  root_map.rs  root_set.rs  root_vec.rs
mod2-lib/src/core/pre_equation/: condition.rs  membership.rs  mod.rs  sort_constraint_table.rs  state_transition_graph.rs
mod2-lib/src/core/rewriting_context/: context.rs  debugger.rs  mod.rs  trace.rs
mod2-lib/src/core/sort/: collection.rs  kind.rs  kind_error.rs  mod.rs  sort.rs  sort_index.rs  sort_spec.rs  sort_table.rs
mod2-lib/src/core/state_transition_graph/: graph.rs  index.rs  mod.rs  position_state.rs  rewrite_search_state.rs
mod2-lib/src/core/symbol/: mod.rs  op_declaration.rs  sort_table.rs  symbol_core.rs
mod2-wl/: Cargo.toml
mod2-wl/resources/: wl_example.wl
mod2-wl/src/: data_atoms.rs  main.rs
mod2/doc/: DesignNotes.md  QuickStart.md
mod2/examples/: example1.mod2
mod2/src/: lib.rs  module.rs
mod2/src/builtin/: boolean_symbol.rs  integer_symbol.rs  mod.rs  string_symbol.rs
mod2/src/core/: mod.rs  module.rs
mod2/src/core/pre_equation/: mod.rs
mod2/src/core/sort/: collection.rs  kind.rs  kind_error.rs  sort.rs  sort_spec.rs
mod2/src/parser/: mod.rs  parser.lalrpop
mod2/src/parser/ast/: attribute.rs  condition.rs  mod.rs  module.rs  sort.rs  sort_spec.rs  symbol_decl.rs  term.rs
mod2/src/tests/: mod.rs
mod2/src/theory/: dag_node.rs  dag_node_attributes.rs  symbol.rs  term.rs
mod2/src/theory/free_theory/: free_symbol.rs  mod.rs
mod2/src/theory/variable_theory/: mod.rs  variable_symbol.rs
src/: lib.rs
src/abstractions/: heap.rs  mod.rs  rccell.rs
src/builtin/: boolean_symbol.rs  integer_symbol.rs  mod.rs  string_symbol.rs
src/core/: mod.rs  module.rs
src/core/pre_equation/: condition.rs  mod.rs
src/core/sort/: collection.rs  kind.rs  kind_error.rs  mod.rs  sort.rs  sort_spec.rs
src/parser/: mod.rs  parser.lalrpop
src/parser/ast/: condition.rs  mod.rs  module.rs  sort_spec.rs  symbol_decl.rs  term.rs
src/theory/: dag_node.rs  mod.rs  symbol.rs  symbol_type.rs  term.rs  theory_attributes.rs
src/theory/free_theory/: free_symbol.rs
src/theory/variable_theory/: variable_symbol.rs
