[workspace]
members = [
    "mod2",
    "mod2-lib",
    "mod2-abs",
    "mod2-wl"
]
resolver = "2"

[workspace.package]
authors     = ["Robert Jacobson <rljacobson@gmail.com"]
repository  = "https://www.github.com/rljacobson/mod2"
version     = "0.1.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
readme      = "README.md"

publish = false

[workspace.dependencies]
string_cache = "0.8"   # String interning
#ustr        = "1.0.0" # String interning
bit-set      = "0.8"   # NatSet implementation
enumflags2   = "0.7"   # BitFlags from an enum
once_cell    = "^1.20" # Lazy statics
rand         = "^0.9"  # Testing
paste        = "^1.0"  # Concat identifiers in `implement_data_atom!` macro

total_float_wrap = "^0.1.1" # Totally ordered, hashable floating point types.
lalrpop-util     = { version = "0.22", features = ["lexer", "unicode"] }

## Logging ##
tracing            = "0.1"
tracing-subscriber = "0.3"
