[workspace]
members = [
    "mod2",
    "mod2-lib",
    "mod2-abs",
#    "mod2-wl"
]
resolver = "3"

[workspace.package]
authors     = ["Robert Jacobson <rljacobson@gmail.com"]
repository  = "https://www.github.com/rljacobson/mod2"
version     = "0.1.0"
edition     = "2024"
license     = "MIT OR Apache-2.0"
readme      = "README.md"

publish = false

[workspace.dependencies]
# Repository crates
mod2-abs = { path = "mod2-abs" }
mod2-lib = { path = "mod2-lib" }

# Shared dependencies
bit-set       = "0.8"   # NatSet implementation
enumflags2    = "0.7"   # BitFlags from an enum
lalrpop       = "0.22"  # Parser
lalrpop-util  = { version = "0.22", features = ["lexer", "unicode"] }
num-bigint    = "0.4"
num-traits    = "0.2"
once_cell     = "1" # Lazy statics
ordered-float = "5" # Totally ordered, hashable floating point types.
paste         = "1"  # Concat identifiers in `implement_data_atom!` macro
rand          = "0.9"  # Testing
smallvec      = { version = "2.0.0-alpha.11", features = ["std"] }
string_cache  = "0.8"   # String interning
nu-ansi-term  = "0.46"

## Logging ##
tracing            = "0.1"
tracing-subscriber = "0.3"
