[package]
name        = "mod2-abs"
description = "Abstractions over backend implementation of utilities for mod2"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
readme  = "README.md"

[dependencies]
string_cache.workspace = true
#ustr.workspace        = true
bit-set.workspace      = true

tracing.workspace            = true
tracing-subscriber.workspace = true
