[package]
name        = "mod2-abs"
description = "Abstractions over backend implementation of utilities for mod2"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
readme  = "README.md"

[dependencies]
bit-set.workspace      = true
num-bigint.workspace   = true
num-traits.workspace   = true
smallvec.workspace     = true
string_cache.workspace = true

tracing.workspace            = true
tracing-subscriber.workspace = true
