[package]
name        = "mod2-lib"
description = "A RIIR for Maude's state-of-the-art pattern matching algorithms"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true
readme      = "README.md"
keywords    = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories  = ["algorithms", "compilers", "mathematics", "science", "parsing"]

[features]
default  = ["gc_debug", "debug", "profiling"]

debug         = []
gc_debug      = []
multithreaded = []
profiling     = []

[dependencies]
mod2-abs = { path = "../mod2-abs" }

ordered-float.workspace = true
paste.workspace         = true
enumflags2.workspace    = true
once_cell.workspace     = true
rand.workspace          = true
nu-ansi-term.workspace  = true