[package]
name        = "mod2"
description = "New implementation of Maude's state-of-the-art pattern matching algorithms"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true

readme      = "README.md"
keywords    = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories  = ["algorithms", "compilers", "mathematics", "science", "parsing"]

[build-dependencies]
lalrpop = "0.22.1" # Parser

[dependencies]
mod2-abs = { path = "../mod2-abs" }

#pratt        = { path = "../pratt", default-features = false, features = ["ustr"] }
lalrpop-util.workspace = true
enumflags2.workspace   = true
