[package]
name        = "mod2"
description = "New implementation of Maude's state-of-the-art pattern matching algorithms"
authors.workspace    = true
repository.workspace = true
version.workspace    = true
edition.workspace    = true
license.workspace    = true
publish.workspace    = true

readme      = "README.md"
keywords    = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories  = ["algorithms", "compilers", "mathematics", "science", "parsing"]

[build-dependencies]
lalrpop.workspace = true

[dependencies]
mod2-abs.workspace = true
mod2-lib.workspace = true

lalrpop-util.workspace = true
